<resources>
    <string name="app_name">Outer Worlds</string>
    <string name="app_title">Outer Worlds Colony</string>
    <string name="enter_name">Enter Name</string>
    <string name="strength">Dayanıklılık</string>
    <string name="speed">Hız</string>
    <string name="capacity">Kapasite</string>
    <string name="confirmation">Devam Et</string>
    <string name="total_points">Dağıtılacak Puan:</string>
    <string name="error_name_empty">İsim boş geçilemez!</string>
    <string name="error_points">Tüm puanları dağıtmalısın!</string>
    <string name="error_ability">Yetenek boş olamaz!</string>
    <string name="tab_station">Istasyon</string>
    <string name="tab_favorite">Favoriler</string>
    <string name="ugs">UGS:</string>
    <string name="eus">EUS:</string>
    <string name="ds">DS:</string>
    <string name="search">Arama Yap</string>
    <string name="travel">GİT</string>
    <string name="ugs_long">Uzay giysisi sayısı</string>
    <string name="eus_long">Evrensel uzay süresi</string>
    <string name="ds_long">Dayanıklılık Süresi</string>
    <string name="favorites">Favoriler</string>
    <string name="travel_to_world">Dünyaya Dön</string>
    <string name="success_stations_stock">Tüm istasyonların stok ihtiyacını karşıladın</string>
    <string name="fail_eus">Uzay giysilerini dağıtmak için EUS yeterli değil</string>
    <string name="low_health">Uzay gemisi fazla hasar aldı</string>
    <string name="low_ship_eus">Uzay gemisinde tüm istasyonlara yetecek kadar uzay giysisi kalmadı.</string>
    <string name="error_list_empty">"Network Error - EMPTY LIST"</string>
</resources>